--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,19 @@
 			<artifactId>cglib</artifactId>
 			<version>2.2.2</version>
 		</dependency>
+		
+		<!-- Google Prediction API -->
+		<dependency>
+	    	<groupId>com.google.apis</groupId>
+	    	<artifactId>google-api-services-prediction</artifactId>
+	    	<version>v1.6-rev12-1.17.0-rc</version>
+    	</dependency>
+    
+    	<dependency>
+	    	<groupId>com.google.http-client</groupId>
+	    	<artifactId>google-http-client-jackson2</artifactId>
+	    	<version>1.17.0-rc</version>
+    	</dependency>
 	</dependencies>
 	
 	<build>
